--- a/G14_Final_Report.Rmd
+++ b/G14_Final_Report.Rmd
@@ -75,6 +75,147 @@ grid.arrange(war, peace, nrow=2)
 
 text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
 
+
+###Our Pronouns, Ourselves
+
+In this section, we continue the use of temporal analysis, turning from the broad subjects of **war** and **peace** to a more meta-analytical look at how Presidents refer to themselves, the country, and the citizens thereof. Before examining the data, we hypothesized that there might be an increase in instances of first-person singular prounoun ("I","me","my","mine") usage; as the role of the United States presidency became an increasingly powerful position, perhaps those who held the office would insert themselves more frequently into their States of the Union addresses. 
+
+Interestingly, the trend we see shows that while first-person singular prounoun usage has indeed increased in the past century, it has been greatly over-shadowed by the use of the first-person *plural* prounoun ("we","us","our","ours"). The trend is abundantly clear and persistent over the last 100 years. 
+
+One might speculate that, with the advent of broadcast radio in the early 20th century (and later, television), the nature of the predsient's annual State of the Union address transformed from a mere "status report" to a unifiying, morale-boosting, identity-forging speech. 
+
+Further interesting analysis along these lines might include noting differences in prounoun usage in election years vs. non-election years for 1st-term presidents.
+
+```{r echo=FALSE, fig.width=9, fig.height=4, fig.align='center', warning=FALSE, message=FALSE}
+ 
+# I/me/my/mine
+nums <- 1:224
+count.Me <- c()
+for (i in nums) {
+  w <- length(which(docs[,i] == 'I'))
+  x <- length(which(docs[,i] == 'me'))
+  y <- length(which(docs[,i] == 'my'))
+  z <- length(which(docs[,i] == 'mine'))
+  count.Me <- cbind(count.Me, w+x+y+z)
+}
+count.Me <- as.matrix(count.Me)
+count.Me <- t(count.Me)
+count.Me <- as.data.frame(count.Me)
+Me <- ggplot(count.Me, aes(x = nums, y = count.Me$V1)) + geom_bar(stat='identity') + ggtitle('Frequency of "I/Me/My/Mine"') + xlab('') + ylab('Count') 
+
+# You/your/yours/y'all
+count.You <- c()
+for (i in nums) {
+  w <- length(which(docs[,i] == 'you'))
+  x <- length(which(docs[,i] == 'your'))
+  y <- length(which(docs[,i] == 'yours'))
+  z <- length(which(docs[,i] == "y'all"))
+  count.You <- cbind(count.You, w+x+y+z)
+}
+count.You <- as.matrix(count.You)
+count.You <- t(count.You)
+count.You <- as.data.frame(count.You)
+You <- ggplot(count.You, aes(x = nums, y = count.You$V1)) + geom_bar(stat='identity') + ggtitle('Frequency of "You/Your/Yours/Y\'all"') + xlab('') + ylab('Count') 
+
+# We/us/our/ours
+count.We <- c()
+for (i in nums) {
+  w <- length(which(docs[,i] == 'we'))
+  x <- length(which(docs[,i] == 'us'))
+  y <- length(which(docs[,i] == 'our'))
+  z <- length(which(docs[,i] == 'ours'))
+  count.We <- cbind(count.We, w+x+y+z)
+}
+count.We <- as.matrix(count.We)
+count.We <- t(count.We)
+count.We <- as.data.frame(count.We)
+We <- ggplot(count.We, aes(x = nums, y = count.We$V1)) + geom_bar(stat='identity') + ggtitle('Frequency of "We/Us/Our/Ours"') + xlab('') + ylab('Count')
+
+# America/America's/Americans/Americans'
+count.America <- c()
+for (i in nums) {
+  w <- length(which(docs[,i] == 'america'))
+  x <- length(which(docs[,i] == "america's"))
+  y <- length(which(docs[,i] == 'american'))
+  z <- length(which(docs[,i] == 'americans'))
+  xx <- length(which(docs[,i] == "americans'"))
+  count.America <- cbind(count.America, w+x+y+z+xx)
+}
+count.America <- as.matrix(count.America)
+count.America <- t(count.America)
+count.America <- as.data.frame(count.America)
+America <- ggplot(count.America, aes(x = nums, y = count.America$V1)) + geom_bar(stat='identity') + ggtitle('Frequency of "America/America\'s/American/Americans/Americans\'"') + xlab('') + ylab('Count')
+
+
+# They/Them/Their/Theirs
+count.They <- c()
+for (i in nums) {
+  w <- length(which(docs[,i] == 'they'))
+  x <- length(which(docs[,i] == 'them'))
+  y <- length(which(docs[,i] == 'their'))
+  z <- length(which(docs[,i] == 'theirs'))
+  count.They <- cbind(count.They, w+x+y+z)
+}
+count.They <- as.matrix(count.They)
+count.They <- t(count.They)
+count.They <- as.data.frame(count.They)
+They <- ggplot(count.They, aes(x = nums, y = count.They$V1)) + geom_bar(stat='identity') + ggtitle('Frequency of "They/Them/Their/Theirs"') + xlab('') + ylab('Count')
+
+
+#Country/Country's/Nation/Nation's
+count.Country <- c()
+for (i in nums) {
+  w <- length(which(docs[,i] == 'country'))
+  x <- length(which(docs[,i] == "country's"))
+  y <- length(which(docs[,i] == 'nation'))
+  z <- length(which(docs[,i] == "nation's"))
+  count.Country <- cbind(count.Country, w+x+y+z)
+}
+count.Country <- as.matrix(count.Country)
+count.Country <- t(count.Country)
+count.Country <- as.data.frame(count.Country)
+Country <- ggplot(count.Country, aes(x = nums, y = count.Country$V1)) + geom_bar(stat='identity') + ggtitle('Frequency of "Country/Nation/Country\'s/Nation\'s\'"') + xlab('') + ylab('Count') 
+
+
+# Plots
+require(gridExtra) 
+
+grid.arrange(Me, We, nrow=2)
+```
+
+Similar to the above two plots, here we examine the relative usage of the pronouns "you" and "they". While neither is wholly remarkable, what becomes very interesting to investigate are the anomalies in frequency. For example, on the "You" plot below, we see one State of the Union Address, number 175 (Lyndon B. Johnson, 1966), where the frequency of "you" explodes. 
+
+In this speech, Johnson employs the following structural style:
+
+> I recommend that you provide...
+
+and
+
+> I recommend that you make it possible ...
+
+and 
+ 
+> I recommend that you meet the growing menace of crime ...
+
+This makes it seem conversational -- he is asking his listeners (the American people as well as the legislature) for help in accomplishing a list of goals. It also casts him in a very passive, almost non-threatening light. He is presenting himself as a public servant, and not as a domineering leader. Eventually, he summarizes his pleas with this eloquent paragraph:
+
+> I have not come here tonight to ask for pleasant luxuries or for idle   
+> pleasures. I have come here to recommend that you, the representatives  
+> of the richest Nation on earth, you, the elected servants of a people   
+> who live in abundance unmatched on this globe, you bring the most urgent
+> decencies of life to all of your fellow Americans.
+
+```{r echo=FALSE, fig.width=9, fig.height=4, fig.align='center', warning=FALSE, message=FALSE}
+grid.arrange(You, They, nrow=2)
+```
+
+Here, we see the relative usage of the following groups of terms: ("country/nation") and ("America/American"). The most obvious observation is that, within the last 50 years, presidents have been using "America(n)" far more frequently. 
+
+```{r echo=FALSE, fig.width=9, fig.height=4, fig.align='center', warning=FALSE, message=FALSE}
+grid.arrange(Country, America, nrow=2)
+```
+
+
 ##III. Topic Analysis
 In this part, we did topic analysis over the speeches of presidents using LDA. We first discovered the possible five topics among all speeches. Each speech will be assigned to a topic. The related words of each topic will aslo show in the legend of each plot. We then discovered the topics of speeches for both Republican and Democrat presidents. We expect some differences between the topics for different parties. 
 
@@ -85,7 +226,7 @@ library(RTextTools)
 library(ggplot2)
 library(rJava)
 
-setwd('~/Desktop/EDAV/SOTU')
+#setwd('~/Desktop/EDAV/SOTU')
 speech = read.csv("Word_Document_Matrix.csv", na.strings = "NA")
 nouns = read.table("nouns.txt")
 noun = as.character(nouns$V1)
